<resources>
    <string name="app_name">ToDoApp</string>
    <string name="add_task_dialog_title">Add a new task</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="type">Type</string>

    <string-array name="task_types">
        <item>Personal</item>
        <item>Work</item>
        <item>Community</item>
    </string-array>
</resources>
