<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:paddingBottom="@dimen/default_margin"
    android:paddingTop="@dimen/default_margin">

    <TextView
        android:id="@+id/task_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/task_delete"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:onClick="deleteTask"
        android:scaleType="centerCrop"
        android:src="@drawable/check" />
</RelativeLayout>